Fix About page alignment

--- a/app/about/about.css
+++ b/app/about/about.css
@@ -1,4 +1,4 @@
-.about-tech .col-md-4 {
+.about-tech {
   margin-bottom: 30px;
   text-align: center;
 }
